# BindFlow

./: .gitignore  .readthedocs.yml  CONTRIBUTORS.md  README.rst  environment-linux.yml  environment-macos.yml  environment.yml  environment_pinned.yml  pyproject.toml  requirements_docs.txt  similarity.py
.conda_create_env/: environment.yml
.github/workflows/: pypi-publish.yml  tests.yml
docs/: conf.py  index.rst
docs/notebooks/: quickstart.ipynb
docs/source/: CHANGELOG.md  about-us.md  api-reference.rst  citations.md  faq.md  installation.md  installation.rst  tutorials.md
docs/source/_static/: custom.css  custom.js
docs/source/env/backup/: environment-linux.yml  environment-macos.yml
docs/source/env/latest/: environment-linux.yml  environment-macos.yml
docs/source/env/relaxed/: environment.yml
docs/source/guides/: customizing.md  debugging.md  deploy.md  force-fields.md  index.md
docs/source/guides/performance/: index.md
docs/source/modules/: data.md  flow_builder.md  generate_scheduler.md  generate_scheduler.rst  mdp.md  mdp.rst  runners.md  runners.rst  solvent.md  solvent.rst  system_builder.md  system_builder.rst  utils.md  utils.rst
docs/source/notebooks/: mmpbsa.ipynb
examples/: README.md  mdp-config-section.yml
examples/2VT4/: example_execution.py
examples/4HW3/: config-mmpbsa.yml  example_execution-mmpbsa.py
examples/4HW3/inputs/ligands/: inhibitor_0.mol  inhibitor_1.mol  ligand_4hw3.mol
examples/4hw3/: config-mmpbsa.yml  example_execution-mmpbsa.py
examples/4hw3/inputs/ligands/: inhibitor_1.mol
examples/A2A/: README.md  config-mmpbsa.yml  make_ndx.py
examples/CyclophilinD/: config-mmpbsa.yml  config.yml  example_execution-fep.py  example_execution-mmpbsa.py  example_execution.py  executor-fep.py  executor-mmpbsa.py
examples/CyclophilinD/inputs/: dummy_cofactor_30.mol
examples/CyclophilinD/inputs/ligands/: inhibitor_15.mol  inhibitor_2.mol  inhibitor_26.mol  inhibitor_30.mol  inhibitor_32.mol  inhibitor_34.mol  inhibitor_5.mol  inhibitor_6.mol  inhibitor_7.mol  inhibitor_9.mol
examples/SAMPL6-OA/: config-fep.yml  config-mmpbsa.yml  executor-fep.py  executor-mmpbsa.py
examples/configs/amber/membrane/: config-fep.yml
examples/configs/amber/soluble/: config-mmpbsa.yml
examples/configs/charmm/soluble/: config-fep.yml
github/workflows/: tests.yml
pinned-env/: environment-linux.yml  environment-mac.yml
pip-env/: environment-linux.yml  environment-mac.yml
src/abfe/: __init__.py  _version.py  calculate_abfe.py  cli.py  home.py
src/abfe/free_energy/: analysis.py  gather_results.py
src/abfe/mdp/: _path_handler.py  mdp.py
src/abfe/mdp/templates/: __init__.py
src/abfe/orchestration/: flow_builder.py  generate_scheduler.py  generate_snake.py
src/abfe/preparation/: boresch.py  gmx_topology.py  solvent.py  system_builder.py
src/abfe/rules/: __init__.py
src/abfe/rules/equi/: Snakefile
src/abfe/rules/fep/: Snakefile  calculate_result.smk
src/abfe/rules/ligand_equilibration_workflow/: Snakefile  complex_equil_setup.smk  complex_equil_simulation.smk  ligand_equil_setup.smk  ligand_equil_simulation.smk
src/abfe/rules/ligand_fep_workflow/: Snakefile  calculate_result.smk  complex_fep_ana.smk  complex_fep_setup.smk  complex_fep_simulation.smk  ligand_fep_ana.smk  ligand_fep_setup.smk  ligand_fep_simulation.smk
src/abfe/rules/receptor_workflow/: build_ligand_systems.smk  post_commands.smk  simulations.smk
src/abfe/rules/super_flow/: Snakefile  build_ligand_systems.smk  post_commands.smk  simulations.smk
src/abfe/scripts/: final_receptor_results.py
src/abfe/scripts/free_energy/: analysis.py  calculate_ABFE_transformation_dG.py  gather_results.py
src/abfe/scripts/preparation/: boresch.py  generate_boresch_restraints.py  gmx_topology.py  system_builder.py
src/abfe/template/: __init__.py
src/abfe/utils/: cluster.py  mdp.py  tools.py
src/bindflow/: __init__.py  _gmx_check.py  _version.py  calculate_abfe.py  cli.py  home.py  run_abfe.py  run_mmpbsa.py  runners.py
src/bindflow/data/ci_systems/: WP6.tgz  config-fep.yml  config-mmpbsa.yml  config.yml
src/bindflow/data/gmx_water_models/: README.md
src/bindflow/free_energy/: abfe_analysis.py  analysis.py  fep_analysis.py  gather_results.py  mmxbsa_analysis.py
src/bindflow/mdp/: _path_handler.py  mdp.py
src/bindflow/mmpbsa_in/: mmpbsa_in_load_defaults.py
src/bindflow/mmpbsa_in/templates/: gb.in  pb.in  pb_gb.in
src/bindflow/orchestration/: flow_builder.py  generate_scheduler.py
src/bindflow/preparation/: solvent.py  system_builder.py
src/bindflow/rules/: __init__.py
src/bindflow/rules/equi/: Snakefile  boresch.smk
src/bindflow/rules/fep/: Snakefile  calculate_result.smk  gather_receptor_results.smk
src/bindflow/rules/mmpbsa/: Snakefile  ana.smk  calculate_result.smk  create_mmpbsa_in.smk  gather_receptor_results.smk  post_process_prod.smk  setup.smk  simulation.smk
src/bindflow/rules/super_flow/: Snakefile  build_ligand_systems.smk
src/bindflow/utils/: my_pdb.py  tools.py
test/: test_abfe.py  test_fep.py  test_mmpbsa.py  test_small.py
tests/: test_fep.py  test_mmpbsa.py
(+112 files in other folders)
