[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Hompage" = "https://github.com/ale94mleon/BindFlow"
"Discussions" = "https://github.com/ale94mleon/BindFlow/discussions"
"Documentation" = "https://BindFlow.readthedocs.io/en/latest/"
"Issues" = "https://github.com/ale94mleon/BindFlow/issues"

[project]
name = "bindflow"
dynamic = ["version"]
description = "A snakemake-based workflow for ABFE calculations using GROMACS."
readme = "README.rst"

authors=[
    {name="Alejandro Martínez-León", email="ale94mleon@gmail.com"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GPL-3.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design"
]

requires-python = ">= 3.8 , < 3.10"
dependencies = [
    "alchemlyb == 2.0.0", # TODO update to new
    "pymbar == 4.0.1", #TODO  update to new
    "MDRestraintsGenerator",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
    "mdanalysis",
    "TOFF >= 0.1.0",
    "tabulate == 0.8.10", # TODO update to new
    "pyyaml",
    "uncertainties",
    "gmx_MMPBSA", # MMPBSA DEPENDENCY
    "natsort", # MMPBSA DEPENDENCY
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/bindflow/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bindflow = [
    "LICENSE",
    "data/gmx_ff/*.tar.gz",
    "data/water_models/*.tar.gz",
    "data/water_models/*.yml",
    "data/ci_systems/**/*.yml",
    "data/ci_systems/**/*.tar.gz",
    "mdp/templates/**/*.mdp",
    "mmpbsa_in/templates/*.in",
    "rules/**/*.smk",
    "rules/**/Snakefile"
]

[project.scripts]
abfe-run = "bindflow.cli:abfe_run"
abfe-dag = "bindflow.cli:abfe_dag"
abfe-check_results = "bindflow.cli:abfe_check_results"
abfe-archive = 'bindflow.cli:abfe_archive'
abfe-unarchive = 'bindflow.cli:abfe_unarchive'